[gd_scene format=3 uid="uid://wps0hpecyxnr"]

[ext_resource type="Script" uid="uid://bqmvg6f4uvrga" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cbcqbll54pg2b" path="res://Assets/MC/Spaceships-1.png" id="1_v0iea"]

[node name="Player" type="CharacterBody2D" unique_id=466430305 groups=["player"]]
z_index = 1
script = ExtResource("1_cvnsp")

[node name="Timers" type="Node" parent="." unique_id=783165018]

[node name="BulletTimer" type="Timer" parent="Timers" unique_id=840710794]
wait_time = 0.35
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="Timers" unique_id=1721197752]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1459949071]
rotation = 1.5707964
texture = ExtResource("1_v0iea")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=686200216]
rotation = 1.5707964
polygon = PackedVector2Array(0, -31, -22, 14, 0, 21, 22, 13)
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="." unique_id=2107424118]
position = Vector2(44, 0)
metadata/_edit_lock_ = true

[connection signal="timeout" from="Timers/InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
